--- a/site-html/index.html
+++ b/site-html/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Olá Mundo</h1>
     <h2>Subtítulo nível 2</h2>
-    <h3>Subtítulo nível 3</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime est, excepturi mollitia ipsum eos accusamus incidunt illum necessitatibus perspiciatis aliquid ab tenetur assumenda dicta doloremque deleniti veritatis iusto minus eveniet!</p>
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam incidunt ipsam qui magni nesciunt quia esse porro, nihil autem obcaecati, rerum labore deleniti atque accusantium! Dicta aliquid nesciunt corporis autem.</p>
+    <hr>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus laboriosam est, quia beatae iste deleniti officia ut obcaecati excepturi odio veritatis mollitia facilis repellendus ipsam, exercitationem, doloremque laudantium voluptates molestiae!</p>
 </body>
 </html>
