--- a/site-html/index.html
+++ b/site-html/index.html
@@ -13,5 +13,19 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam incidunt ipsam qui magni nesciunt quia esse porro, nihil autem obcaecati, rerum labore deleniti atque accusantium! Dicta aliquid nesciunt corporis autem.</p>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus laboriosam est, quia beatae iste deleniti officia ut obcaecati excepturi odio veritatis mollitia facilis repellendus ipsam, exercitationem, doloremque laudantium voluptates molestiae!</p>
+    <p>Outra frase</p>
+    <h3>Lista ordenada:</h3>
+    <ol>
+        <li>exemplo</li>
+        <li>lista</li>
+        <li>ordenada</li>
+    </ol>
+    <hr>
+    <h3>Lista sem ordem:</h3>
+    <ul>
+        <li>lista</li>
+        <li>sem</li>
+        <li>ordem</li>
+    </ul>
 </body>
 </html>
